Preparing release [skip ci]

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,323 +1,28 @@
-* bob/bob.buildout
-  * v2.2.2 (Jan 10, 2020 08:37)
-     * bob/bob.buildout!37 Reset license file location and remove hack (affects bob/bob.devtoolsbob/bob.buildout#44): This MR resets the location of the license file for this package in the conda recipe.    Affects bob/bob.devtoolsbob/bob.buildout#44 and bob/bob.devtoolsbob/bob.buildout!127.     * bob/bob.buildout!38 [conda] Completely remove "license_file" entry on conda recipes     * bob/bob.buildout!39 Add missing requirements.txt to MANIFEST.in: Without it the file is missing from the source archive and therefore  cannot be installed using pip.     - bob/bob.buildout!37 Reset license file location and remove hack (affects bob/bob.devtools#44): This MR resets the location of the license file for this package in the conda recipe.    Affects bob/bob.devtools#44 and bob/bob.devtools!127.
-     - bob/bob.buildout!38 [conda] Completely remove "license_file" entry on conda recipes
-     - bob/bob.buildout!39 Add missing requirements.txt to MANIFEST.in: Without it the file is missing from the source archive and therefore  cannot be installed using pip.
-  * patch
-     - bob/bob.buildout!36 [docs] removing the Local package development for bob and replacing it with a link to bobdevtools: This merge request attempt to remove all the information about developing bob packages locally and move them to `bob.devtools` documentation.
-* bob/bob.extension
-  * major
-     - bob/bob.extension!106 Removed Dependency graph script: moved this to bob.devtools    Closes bob/bob.extension#62
-     - bob/bob.extension!109 [click] lookup in the config files before env var: This changes the behavior of loading options in ResourceOptions  Since the config files are given explicitly, similar to command line options,  it's better to look there first before looking into env variables.
-     - bob/bob.extension!108 [click] Change the ConfigCommand and ResourceOption logic: Fixes bob/bob.extension#66     Changed the logic behind `ConfigCommand` and `ResourceOption`.
-     - bob/bob.extension!110 [click] ResourceOption can be used without ConfigCommand: related to bob.fusion.base#8
-     - bob/bob.extension!107 Fix buildout code-block guesses: Fixes issues with the doc lexer guessing.
-     - bob/bob.extension!111 Fix lookup of click manual: This MR fixes an issue with the nightly builds in which bob.extension sphinx building does not find the click catalogue online.
-     - bob/bob.extension!102 [docs] removed information about building python packages locally: [docs] removed information about building packages locally and referred to bob.devtools when necessary.
-* bob/bob.blitz
-  * patch
-* bob/bob.core
-  * patch
-* bob/bob.io.base
-  * patch
-* bob/bob.math
-  * patch
-* bob/bob.measure
-  * minor
-     - bob/bob.measure!97 Add Area Under ROC Curve (AUC): Add the function called bob.measure.roc_auc_score.  Add the AUC computation to ``bob measure metrics`` command.  Fixes bob/bob.measure#2
-     - bob/bob.measure!98 Separate semilogx and TPR options in ROC plots: Also, ran black on some code files.
-* bob/bob.io.image
-  * patch
-* bob/bob.db.base
-  * patch
-* bob/bob.io.video
-  * patch
-     - bob/bob.io.video!18 Adjusting again memory leak test: closes bob/bob.io.video#15
-* bob/bob.io.matlab
-  * patch
-* bob/bob.io.audio
-  * patch
-* bob/bob.sp
-  * patch
-* bob/bob.ap
-  * patch
-* bob/bob.ip.base
-  * patch
-* bob/bob.ip.color
-  * patch
-* bob/bob.ip.draw
-  * patch
-* bob/bob.ip.gabor
-  * patch
-* bob/bob.learn.activation
-  * patch
-* bob/bob.learn.libsvm
-  * patch
-     - bob/bob.learn.libsvm!10 Fix precision test to be a bit softer on floating-point comparisons: Fix a precision test to use `numpy.isclose` instead of comparing for equality.
-* bob/bob.learn.linear
-  * patch
-* bob/bob.learn.mlp
-  * patch
-* bob/bob.learn.boosting
-  * patch
-* bob/bob.db.iris
-  * patch
-     - bob/bob.db.iris!8 remove unused links.rst file
-* bob/bob.learn.em
-  * patch
-* bob/bob.db.wine
-  * patch
-* bob/bob.db.mnist
-  * patch
-* bob/bob.db.atnt
-  * patch
-* bob/bob.ip.facedetect
-  * patch
-* bob/bob.ip.optflow.hornschunck
-  * patch
-* bob/bob.ip.optflow.liu
-  * patch
-* bob/bob.ip.flandmark
-  * patch
-* bob/gridtk
-  * patch
-* bob/bob.ip.qualitymeasure
-  * patch
-* bob/bob.ip.skincolorfilter
-  * patch
-* bob/bob.ip.facelandmarks
-  * patch
-* bob/bob.ip.dlib
-  * patch
-* bob/bob.db.arface
-  * patch
-* bob/bob.db.asvspoof
-  * patch
-* bob/bob.db.asvspoof2017
-  * patch
-* bob/bob.db.atvskeystroke
-  * patch
-* bob/bob.db.avspoof
-  * patch
-* bob/bob.db.banca
-  * patch
-* bob/bob.db.biosecure
-  * patch
-* bob/bob.db.biosecurid.face
-  * patch
-* bob/bob.db.casia_fasd
-  * patch
-* bob/bob.db.casme2
-  * patch
-* bob/bob.db.caspeal
-  * patch
-* bob/bob.db.cohface
-  * patch
-* bob/bob.db.frgc
-  * patch
-* bob/bob.db.gbu
-  * patch
-* bob/bob.db.hci_tagging
-  * patch
-* bob/bob.db.ijba
-  * patch
-* bob/bob.db.ijbc
-  * patch
-* bob/bob.db.kboc16
-  * patch
-* bob/bob.db.lfw
-  * patch
-* bob/bob.db.livdet2013
-  * patch
-* bob/bob.db.mobio
-  * patch
-* bob/bob.db.msu_mfsd_mod
-  * patch
-* bob/bob.db.multipie
-  * patch
-* bob/bob.db.nist_sre12
-  * patch
-* bob/bob.db.putvein
-  * patch
-* bob/bob.db.replay
-  * patch
-* bob/bob.db.replaymobile
-  * patch
-* bob/bob.db.scface
-  * patch
-* bob/bob.db.utfvp
-  * patch
-* bob/bob.db.verafinger
-  * patch
-* bob/bob.db.fv3d
-  * patch
-* bob/bob.db.hkpu
-  * patch
-* bob/bob.db.thufvdt
-  * patch
-* bob/bob.db.mmcbnu6k
-  * patch
-* bob/bob.db.hmtvein
-  * patch
-* bob/bob.db.voicepa
-  * patch
-* bob/bob.db.xm2vts
-  * patch
-* bob/bob.db.youtube
-  * patch
-* bob/bob.db.pericrosseye
-  * patch
-* bob/bob.db.maskattack
-  * patch
-* bob/bob.db.casiasurf
-  * patch
-     - bob/bob.db.casiasurf!1 Resolve "Database not available anymore ?": Closes bob/bob.db.casiasurf#4
-     - bob/bob.db.casiasurf!2 Add test labels
-* bob/bob.db.fargo
-  * v1.0.2 (Dec 13, 2019 10:30)
-     * Extract frontal image in .mov files instead of .264
-  * v1.0.3 (Dec 13, 2019 10:31)
-     * Extract frontal image in .mov files instead of .264
-  * patch
-* bob/bob.bio.base
-  * minor
-     - bob/bob.bio.base!178 Fixed issue with numpy.ndarray.resize py37
-     - bob/bob.bio.base!179 Separate semilogx and TPR options in ROC plots: Depends on https://gitlab.idiap.ch/bob/bob.measure/merge_requests/98
-     - bob/bob.bio.base!176 Add bob bio annotate-samples command: This command works very similar to bob bio annotate  except that works without a db interface. Instead,  it requires a list of samples and two functions to  do the job.
-* bob/bob.bio.gmm
-  * patch
-* bob/bob.bio.face
-  * patch
-     - bob/bob.bio.face!59 [mtcnn-annotator] replace it bob.ip.mtcnn with bob.ip.tensorflow_extractor
-* bob/bob.bio.spear
-  * patch
-* bob/bob.bio.video
-  * patch
-     - bob/bob.bio.video!40 Improve FrameContainer and FrameSelector to be more memory efficient: * FrameContainers can now load a subset of themselves from an HDF5 file  * FrameSelectors now can handle `bob.io.video.reader` instances to avoid loading the whole video into memory.
-* bob/bob.bio.vein
-  * patch
-* bob/bob.db.voxforge
-  * patch
-* bob/bob.rppg.base
-  * patch
-* bob/bob.pad.base
-  * minor
-     - bob/bob.pad.base!65 Separate semilogx and TPR options in ROC plots: Depends on https://gitlab.idiap.ch/bob/bob.measure/merge_requests/98
-     - bob/bob.pad.base!66 Fix the wrong total number reported in metrics: Fixes bob.measure#61
-     - bob/bob.pad.base!69 Small fixes
-     - bob/bob.pad.base!68 Add a GMM Algorithm (moved from bob.pad.voice)
-     - bob/bob.pad.base!70 Improve the metrics command with AUC and relaxed threshold criteria
-* bob/bob.pad.face
-  * patch
-     - bob/bob.pad.face!99 Add the BRSU database (note that ``bob.db.brsu`` is not public yet, but will be soon).
-     - bob/bob.pad.face!100 Resolve "Remove dependencies with caffe": Closes bob/bob.pad.face#33
-     - bob/bob.pad.face!102 [database] added test labels for CASIA-SURF (and corresponding tests)
-     - bob/bob.pad.face!103 Improve bbox_cropper in load_utils.py
-     - bob/bob.pad.face!104 Improve high level database interfaces
-* bob/bob.pad.voice
-  * patch
-     - bob/bob.pad.voice!18 Deprecate the GMM algorithm
-* bob/bob.pad.vein
-  * patch
-* bob/bob.fusion.base
-  * patch
-     - bob/bob.fusion.base!11 [click] ResourceOption usage is changed.: Depends on https://gitlab.idiap.ch/bob/bob.extension/merge_requests/110    Fixes bob/bob.fusion.base#8
-* bob/bob.db.oulunpu
-  * patch
-     - bob/bob.db.oulunpu!7 [docs] reference bob.extension.rc in the docs
-* bob/bob.db.uvad
-  * patch
-* bob/bob.db.swan
-  * patch
-     - bob/bob.db.swan!4 Add new SWAN protocols
-* bob/bob.db.siw
-  * patch
-* bob/bob.db.cuhk_cufs
-  * patch
-* bob/bob.db.cbsr_nir_vis_2
-  * patch
-* bob/bob.db.nivl
-  * patch
-* bob/bob.db.pola_thermal
-  * patch
-* bob/bob.db.cuhk_cufsf
-  * patch
-* bob/bob.db.ldhf
-  * patch
-* bob/bob.ip.tensorflow_extractor
-  * patch
-* bob/bob.learn.tensorflow
-  * minor
-     - bob/bob.learn.tensorflow!81 Added @attr(slow) for slow tests: https://gitlab.idiap.ch/bob/bob.nightlies/issues/55
-     - bob/bob.learn.tensorflow!82 [sphinx] Fixed doc test
-     - bob/bob.learn.tensorflow!83 Revert BOB_NOSE_FAST hack in favour of using environment variables supported by nosetests.
-     - bob/bob.learn.tensorflow!79 Add keras-based models, add pixel-wise loss, other improvements: * d47eae91 Add dataset_to_hdf5 command  * cc8a142a EPSC estimators and losses  * 8e274774 improve block extraction  * b9583f15 Add a parallel read option to dataset_from_tfrecords  * a8bc6541 Add an extra feed option to the extractors  * 1c3fdb10 improve logging for vat loss  * 9058f1a8 Add more logging to bob tf cache-dataset  * e7445a23 Save one best evaluation checkpoint by default  * c82154ef Allow architectures to provide the logits layer  * 281e1c26 Add more logging to the predict commands  * ac7d3eda Add a pixel wise loss  * 2f7fec82 Add keras-based models  * c9311f9c Move utils to the utils folder  * 70e0b85 Allow shuffle on epoch end in generator  * 54a8032 add a function to load png images  * 036a308 improve logging  * e155ed5 improve logging in losses  * fa76538 add center loss, mmd loss, and pairwise confusion loss  * d957c74 make sure densenet layer names are consistent  * 63993d4 nitpick  * cda150d add starting point options to the style transfer script  * 7fabc04 Add more utils  * cb9744b new keras models  * 38de7bd Add GAN tools  * f6e1bb5 implement random rotate  * aece6e1 improve the generator and biogenerator classes  * 6e6adde nitpick  * b9cc5a9 handle nans in network predictions  * 27e73ae cast labels to required format  * 8082804 fix imports  * b9fd76b Add model_summary to keras utils  * 4a714e0 add more option to reproducible  * 3241c38 Add keras version of models  * f481311 remove six dependency  * 36c3f4b Add a Gaussian blur filter
-* bob/bob.learn.pytorch
-  * minor
-     - bob/bob.learn.pytorch!40 Deeppixbis extractor: Added the extractor for DeepPixBiS, since it was not present here, but only in the following paper package: ``bob.paper.deep_pix_bis_pad.icb2019``    I guess it's better to have it here as well bob/bob.learn.pytorch!
-     - bob/bob.learn.pytorch!41 Stop Downloading Densenet in nosetests: Extractor need not download the pretrained model now
-* bob/bob.bio.face_ongoing
-  * patch
-     - bob/bob.bio.face_ongoing!3 Fix the documentation index: closes bob/bob.bio.face_ongoing#8
-     - bob/bob.bio.face_ongoing!4 [doc] Fix values in idiap_resnet_msceleb.rst: Corrected the training parameters values of inception ResNet v2 on  MS-Celeb, as well as the link to the training script.
-     - bob/bob.bio.face_ongoing!5 Enable osx-64 builds
-* bob/bob.bio.htface
-  * patch
-     - bob/bob.bio.htface!3 Fix the documentation index
-* bob/bob.db.drive
-  * patch
-     - bob/bob.db.drive!4 [conda] Completely remove "license_file" entry on conda recipes (see...: Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.stare
-  * patch
-     - bob/bob.db.stare!2 [conda] Completely remove "license_file" entry on conda recipes (see...: [conda] Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.chasedb1
-  * patch
-     - bob/bob.db.chasedb1!2 Completely remove "license_file" entry on conda recipes (see...: [conda] Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.iostar
-  * patch
-     - bob/bob.db.iostar!2 [conda] Completely remove "license_file" entry on conda recipes (see...: Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.hrf
-  * patch
-     - bob/bob.db.hrf!2 [conda] Completely remove "license_file" entry on conda recipes (see...: Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.rimoner3
-  * patch
-     - bob/bob.db.rimoner3!2 [conda] Completely remove "license_file" entry on conda recipes (see...: Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.drionsdb
-  * patch
-     - bob/bob.db.drionsdb!2 [conda] Completely remove "license_file" entry on conda recipes (see...: Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.refuge
-  * patch
-     - bob/bob.db.refuge!2 [conda] Completely remove "license_file" entry on conda recipes (see...: Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.db.drishtigs1
-  * patch
-     - bob/bob.db.drishtigs1!3 [conda] Completely remove "license_file" entry on conda recipes (see...: Completely remove "license_file" entry on conda recipes (see bob/bob.devtools#44 and bob/bob.devtools!127)
-* bob/bob.ip.binseg
-  * minor
-     - bob/bob.ip.binseg!9 Minor fixes: This MR includes the following features:    1. Makes it explicit the conversion to RGB images in image pre-processing pipelines  2. Adds a transform for converting between 16-bit and 8-bit PNG images  3. Allows the inferencer to work with globs instead of fixed paths (+ adaptations to this where needed)  4. Adds documentation for `imagefolderinference`  5. Adds explicit dependence to bob.core, required by the 16/8 bit PNG converters  6. Fixes an issue related to the conda recipe (see bob/bob.devtools#44 and bob/bob.devtools!127)
 * bob/bob
-  * major
-     - **Breaking Changes**:
-     - bob/bob.extension!106 Removed Dependency graph script: moved this to bob.devtools    Closes bob/bob.extension#62
-     - **Other Important Changes**:
-     - bob/bob.extension!109 [click] lookup in the config files before env var: This changes the behavior of loading options in ResourceOptions  Since the config files are given explicitly, similar to command line options,  it's better to look there first before looking into env variables.
-     - bob/bob.extension!110 [click] ResourceOption can be used without ConfigCommand: related to bob.fusion.base#8
-     - bob/bob.measure!97 Add Area Under ROC Curve (AUC): Add the function called bob.measure.roc_auc_score.  Add the AUC computation to ``bob measure metrics`` command.  Fixes bob/bob.measure#2
-     - bob/bob.measure!98 Separate semilogx and TPR options in ROC plots: Also, ran black on some code files.
-     - bob/bob.bio.base!179 Separate semilogx and TPR options in ROC plots: Depends on https://gitlab.idiap.ch/bob/bob.measure/merge_requests/98
-     - bob/bob.bio.base!176 Add bob bio annotate-samples command: This command works very similar to bob bio annotate  except that works without a db interface. Instead,  it requires a list of samples and two functions to  do the job.
-     - bob/bob.bio.face!59 [mtcnn-annotator] replace it bob.ip.mtcnn with bob.ip.tensorflow_extractor
-     - bob/bob.bio.video!40 Improve FrameContainer and FrameSelector to be more memory efficient: * FrameContainers can now load a subset of themselves from an HDF5 file  * FrameSelectors now can handle `bob.io.video.reader` instances to avoid loading the whole video into memory.
-     - bob/bob.pad.base!65 Separate semilogx and TPR options in ROC plots: Depends on https://gitlab.idiap.ch/bob/bob.measure/merge_requests/98
-     - bob/bob.pad.base!66 Fix the wrong total number reported in metrics: Fixes bob.measure#61
-     - bob/bob.pad.base!68 Add a GMM Algorithm (moved from bob.pad.voice)
-     - bob/bob.pad.base!70 Improve the metrics command with AUC and relaxed threshold criteria
-     - bob/bob.pad.face!99 Add the BRSU database (note that ``bob.db.brsu`` is not public yet, but will be soon).
-     - bob/bob.pad.face!100 Resolve "Remove dependencies with caffe": Closes bob/bob.pad.face#33
-     - bob/bob.pad.face!102 [database] added test labels for CASIA-SURF (and corresponding tests)
-     - bob/bob.pad.face!103 Improve bbox_cropper in load_utils.py
-     - bob/bob.pad.face!104 Improve high level database interfaces
-     - bob/bob.pad.voice!18 Deprecate the GMM algorithm
-     - bob/bob.fusion.base!11 [click] ResourceOption usage is changed.: Depends on https://gitlab.idiap.ch/bob/bob.extension/merge_requests/110    Fixes bob/bob.fusion.base#8
-     - bob/bob.learn.tensorflow!79 Add keras-based models, add pixel-wise loss, other improvements: * d47eae91 Add dataset_to_hdf5 command  * cc8a142a EPSC estimators and losses  * 8e274774 improve block extraction  * b9583f15 Add a parallel read option to dataset_from_tfrecords  * a8bc6541 Add an extra feed option to the extractors  * 1c3fdb10 improve logging for vat loss  * 9058f1a8 Add more logging to bob tf cache-dataset  * e7445a23 Save one best evaluation checkpoint by default  * c82154ef Allow architectures to provide the logits layer  * 281e1c26 Add more logging to the predict commands  * ac7d3eda Add a pixel wise loss  * 2f7fec82 Add keras-based models  * c9311f9c Move utils to the utils folder  * 70e0b85 Allow shuffle on epoch end in generator  * 54a8032 add a function to load png images  * 036a308 improve logging  * e155ed5 improve logging in losses  * fa76538 add center loss, mmd loss, and pairwise confusion loss  * d957c74 make sure densenet layer names are consistent  * 63993d4 nitpick  * cda150d add starting point options to the style transfer script  * 7fabc04 Add more utils  * cb9744b new keras models  * 38de7bd Add GAN tools  * f6e1bb5 implement random rotate  * aece6e1 improve the generator and biogenerator classes  * 6e6adde nitpick  * b9cc5a9 handle nans in network predictions  * 27e73ae cast labels to required format  * 8082804 fix imports  * b9fd76b Add model_summary to keras utils  * 4a714e0 add more option to reproducible  * 3241c38 Add keras version of models  * f481311 remove six dependency  * 36c3f4b Add a Gaussian blur filter
-     - bob/bob.learn.pytorch!40 Deeppixbis extractor: Added the extractor for DeepPixBiS, since it was not present here, but only in the following paper package: ``bob.paper.deep_pix_bis_pad.icb2019``    I guess it's better to have it here as well bob/bob.learn.pytorch!
-     - bob/bob.ip.binseg!9 Minor fixes: This MR includes the following features:    1. Makes it explicit the conversion to RGB images in image pre-processing pipelines  2. Adds a transform for converting between 16-bit and 8-bit PNG images  3. Allows the inferencer to work with globs instead of fixed paths (+ adaptations to this where needed)  4. Adds documentation for `imagefolderinference`  5. Adds explicit dependence to bob.core, required by the 16/8 bit PNG converters  6. Fixes an issue related to the conda recipe (see bob/bob.devtools#44 and bob/bob.devtools!127)
+  * patch
+     - bob/bob.buildout!40 [script] Revert fixes done to tackle issue bob/bob.buildout#15: Revert fixes done to tackle issue bob/bob.buildout#15. https://bugs.python.org/issue30167 is fixed since a couple of years (I cannot reproduce the error anymore on all supported Python versions)
+     - bob/bob.io.video!19 Make reader and writer classes picklable: Fixes bob/bob.io.video#16
+     - bob/bob.ip.draw!5 Deprecating package
+     - bob/bob.ip.gabor!12 Serialization: Serialized bob.ip.gabor.Jet.
+     - bob/bob.ip.gabor!13 Resolve "JetStatistics divides by the wrong value": Closes bob/bob.ip.gabor#5
+     - bob/bob.learn.linear!12 Made bob.learn.linear.Machine picklable: As mentioned in https://gitlab.idiap.ch/bob/bob.bio.face/-/merge_requests/64 the small hacks made in bob.bio.base to handle pickled stuff is giving more headaches than it should.
+     - bob/bob.learn.linear!13 Fixed arguments input_subtract and input_divide during serialization
+     - bob/gridtk!33 Arbitrary extra arguments for SGE: Adds a new option to `jman submit`, `-e/--sge-extra-args`, to pass arbitray extra arguments to `qsub`.
+     - bob/gridtk!34 Verbose flags were separating parameters: Fixes bob/gridtk#34   The `-v` flags were separating the `-d` option (set database name) and the database name argument, in `gridtk.sge._submit_to_grid`, during the wrapper command generation.  This was not a problem with 0 verbosity, since no `v` was inserted.
+     - bob/bob.ip.qualitymeasure!14 [conda] make bob.io. packages test requirements: Fixes bob/bob.ip.qualitymeasure#5
+     - bob/bob.db.mobio!15 New mobile protocol.: Created a new mobile protocol "mobile0-male-female".  This one, 'dev' and 'eval' are not gender-specific
+     - bob/bob.bio.base!183 Remove usage of numpy.testing.decorators: Fixes bob/bob.bio.base#132
+     - bob/bob.bio.base!170 Explain how new databases are configured: using bob's global configuration system
+     - bob/bob.bio.base!191 Resolve "`check_existence` flag incorrectly handled in filelistdatabase query": Closes bob/bob.bio.base#134
+     - bob/bob.bio.base!198 Fixing and adding features to the scores generation script: I was using the score 'gen' script, but needed some features.    Added:  - A way of specifying how the number of scores is defined (number of subjects and probes, or manually specified);  - A way to generate different scores for dev and eval;  - Tests for the gen script.    Changed:  - The way the scores are generated (each probe against each reference model, instead of randomly).    Fixed:  - Duplicate click options (-p);  - 'positive scores' were generated with a 'negative scores' variable.
+     - bob/bob.bio.face!60 Removed outdated COPYING and updated MANIFEST.in: This merge request fixes an inconsistency in the licenses.    The copying file hadn't been removed and the MANIFEST.in file was still using it.    This patch fixes both.
+     - bob/bob.bio.vein!45 add `eval` group to utfvp database: In this MR, `eval` group is added to the utfvp database.   Please note that `eval` group is defined in `nom` protocol and it was missed in the previous version of `bob.bio.vein`.    Many thanks to @andre.anjos for all his help!
+     - bob/bob.pad.base!71 Configure tests: Similar to bob.bio.base!183  Some classes are picked up by test runners while they are not  UnitTest classes.  Fixes bob/bob.pad.base#33
+     - bob/bob.pad.base!72 Update OneClassGMM2.py: Updating joblib import.
+     - bob/bob.fusion.base!12 Make the model optional in the scatter plot
+     - bob/bob.ip.tensorflow_extractor!15 Tensorflow 2 compatibility: Fixes bob/bob.ip.tensorflow_extractor#9
+     - bob/bob.ip.tensorflow_extractor!16 Make FaceNet pickalable: In this MR FaceNet was made picklable. Two things were necessary.    1. Organize the initialization of the public variables of the facenet class  2. Add a semaphore to control two critical regions (__call__ and __getstate__). This allows Dask to smoothly do multithreading.
+     - bob/bob.learn.pytorch!42 Tensorboard: *  Adds native torch logger
+     - bob/bob.ip.binseg!13 Cleanup model implementation: Cleans up model implementation to:    * Re-use all backbones from torchvision  * Simplify checkpointer  * Remove own implementation of model_zoo  * Implement normalization for torchvision-based backbones  * Enable pytorch installation on osx
+     - bob/bob.ip.binseg!14 Fix test after nomenclature change: [test.test_cli] Closes bob/bob.ip.binseg#2
+     - bob/bob.ip.binseg!15 Support for multi-GPU machines, improved random seed settings and reproducibility
